playground/GKE_sandpit/hello-world-basic-gce/configurations/hello-world-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service-1
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "hello-world-backend-config"}'
spec:
  type: NodePort
  selector:
    greeting: hello
    version: one
  ports:
  - protocol: TCP
    port: 60000
    targetPort: 50000
