playground/GKE_sandpit/hello-world-basic-gce/configurations/hello-world-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service-2
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "hello-world-backend-config"}'
spec:
  type: NodePort
  selector:
    greeting: hello
    version: two
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
